# Intro-Ciencia-Dados

./: README.md
trabalho-01/: pyproject.toml
trabalho-01/trabalho_01/: parte_1.py  parte_2.py  parte_3.py  utils.py
